syntax = "proto3";
option csharp_namespace = "RunnerService.API";
import "common.proto"; 
package userservice.api;

service RunnerService {
  rpc RunTest (GRunTestRequest) returns (GRunTestResponse);
  rpc GetTestsInfo (GGetTestsInfoRequest) returns (GGetTestsInfoResponse);
}

message GRunTestRequest {
  string test_id = 1;
}
message GRunTestResponse {
  common.GResponseStatus status = 1;
}

message GGetTestsInfoRequest {
  repeated string tests_ids = 1;
}
message GGetTestsInfoResponse {
  common.GResponseStatus status = 1;
  bytes infos = 2;
}